Changelog
=========


1.0.4 (unreleased)
------------------

- Introduce inverted link colors.
  Apply blueberry color scheme.
  [Kevin Bieri]

- Update font-awesome to 4.5.0. [jone]

- Add `width-full` functional class of grid system for legacy support.
  [Kevin Bieri]

- Introduce floated grid system.
  [Kevin Bieri]

- Use more modular and adaptive mixins to provide a base to build themes upon it.
  Deprecated variables are stil avilable but will be removed in the next major.
  So use the new variables set for further styling.
  [Kevin Bieri]


1.0.3 (2015-11-17)
------------------

- Change collection / topic icons in order to avoid collision.
  [jone]

- Add open office mimetype icons.
  [jone]


1.0.2 (2015-10-28)
------------------

- Provide mimetype icons for solr flairs.
  [jone]


1.0.1 (2015-10-26)
------------------

- Remove duplicate icon in search results for files.
  [jone]


1.0.0 (2015-09-30)
------------------

- Initial implementation
  [jone]