@@ -4,6 +4,7 @@
     i18n_domain="ftw.theming">
 
     <theme:scss_factory factory=".variables.portal_url_variable_resource_factory" />
+    <theme:scss_factory factory=".variables.plone_image_sizes" />
 
     <theme:scss file="resources/scss/core.scss" slot="top" />
 
